# ii-telegram-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  install.sh  pyproject.toml
alembic/: env.py
data/: .gitkeep
docs/: FEATURES.md  SETUP_GUIDE.md
scripts/: install.sh  setup-small-pc.sh
src/ii_telegram_agent/: __init__.py  cli.py  config.py  models.py
src/ii_telegram_agent/agent/: __init__.py  compaction.py  core.py  session.py
src/ii_telegram_agent/api/: __init__.py  app.py
src/ii_telegram_agent/channels/: __init__.py  base.py
src/ii_telegram_agent/llm/: __init__.py  anthropic.py  base.py  factory.py  google.py  openai.py
src/ii_telegram_agent/memory/: __init__.py  manager.py  soul.py  user_profile.py
src/ii_telegram_agent/scheduler/: __init__.py  heartbeat.py  reminders.py  scheduler.py
src/ii_telegram_agent/skills/: __init__.py  example_skill.py
src/ii_telegram_agent/telegram/: __init__.py  bot.py  handlers.py
src/ii_telegram_agent/tools/: __init__.py  base.py  browser.py  calendar_tool.py  code_executor.py  email_tool.py  exec_approval.py  file_tool.py  registry.py  scheduler_tool.py  shell_tool.py  skill_writer.py  web_search.py
src/ii_telegram_agent/voice/: __init__.py  processor.py
templates/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
tests/: __init__.py  test_agent.py  test_channels.py  test_compaction.py  test_config.py  test_exec_approval.py  test_tools.py
